apps/boutique/network-policies/linkerd/allow-linkerd-control-plane.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkerd-control-plane
  namespace: boutique
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd
      ports:
        - protocol: TCP
          port: 8086
        - protocol: TCP
          port: 8088
        - protocol: TCP
          port: 9995
