apps/boutique/network-policies/linkerd/allow-linkerd-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkerd-proxy
  namespace: boutique
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 4143
        - protocol: TCP
          port: 4191
